fix graph header z-index bug

--- a/src/app/features/dashboard/offers/offers-blue/offers-statistics/offers-statistics.component.scss
+++ b/src/app/features/dashboard/offers/offers-blue/offers-statistics/offers-statistics.component.scss
@@ -31,7 +31,6 @@ h3 {
 
   @media (min-width: 600px) {
     position: absolute;
-    z-index: 999;
   }
   color: white;
  
